--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.koushikdutta.ion:ion:2.+'
 }
