--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity
             android:name=".ProfileActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
